# BruinMarket

./: .gitignore  README.md  build.sh  claude-main.js  package-lock.json  package.json
backend/: go.mod  go.sum  main.go
backend/handlers/: auth.go
backend/models/: user.go
backend/services/: email.go
frontend/: .env.example  .gitignore  Cargo.toml  package-lock.json  package.json
frontend/public/: index.html  manifest.json  robots.txt  sitemap.xml
frontend/src/: App.css  App.js  Chat.js  VerifyEmail.js  components.rs  index.js  lib.rs  main.rs  models.rs  pages.rs  services.rs
simple-upload-backend/: main.go
simple-upload-frontend/: index.html
web/: index.html
