[package]
name = "bruinbuy-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "HtmlSelectElement",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
gloo-net = "0.4"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
yew-router = "0.18"
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }

[lib]
crate-type = ["cdylib"]